# dpia-pdf-poc

./: README.md  gen_mermaid.py  mermaid_diagram.html  pyproject.toml
dpia-pdf-poc/: generate.py  main.py  parsers.py
dpia-schema/: DPIA.yaml  schema.json
dpia-static/: _meta.json  formDefinitions.json  formLogic.json  formSteps.json  forms.json
js/: index.html
reports/: validation_report_20250206_101127.json  validation_report_20250206_101222.json  validation_report_20250206_111608.json  validation_report_20250206_115632.json  validation_report_20250206_132406.json  validation_report_20250211_130159.json  validation_report_20250221_160619.json  validation_report_20250228_170731.json
schemas/: schema_DPIA.json  schema_begrippenkader.json
script/: sync_begrippenkader  validate
sources/: DPIA.yaml  DPIA_field_mapping.yaml  begrippenkader.yaml
